# kamera

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/gandis/kamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  vcpkg-configuration.json  vcpkg.json
app/src/main/java/com/gandis/kamera/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/gandis/kamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
